--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,13 +22,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  dio:
+  cupertino_icons: ^1.0.2
+  dio: 3.0.10
   shared_preferences:
   json_annotation:
   flutter_swiper:
   flutter_webview_plugin:
-  flutter_inappbrowser:
+  flutter_inappwebview:
   path_provider:
   flutter_html:
 
