--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   shared_preferences:
   json_annotation:
   flutter_swiper:
-  flutter_webview_plugin:
+#  flutter_webview_plugin:
   flutter_inappwebview:
   path_provider:
   flutter_html:
